Atualizando a url da api